2009-01-28 Carine Chum <carine.chum@free.fr>
	* acinclude.m4 : Added support for the $DLL_EXT variable to
	some cross-compilation aware macros.
	* configure.in : Change the $DLL_EXT variable value from an empty
	string to 'dll'.

2009-01-27 Jerome Pasquier  <rainbru@free.fr>
	* acinclude.m4 (RB_CHECK_LIBCURL) : Added support for
	cross-compilation to win32.
	
2009-01-16 Jerome Pasquier  <rainbru@free.fr>
	* common/curlfiletoxml.cpp (CurlFileToXml) : Added a constructor
	initializer for the doc pointer to avoid an instance creation with 
	non-NULL value.
	
2009-01-13 Jerome Pasquier  <rainbru@free.fr>
	* common/xmlaccountlist.cpp (refresh) : A std::cout call replaced 
	by a LOGCAT* one to avoid std out print when unit test.
	* common/xmlattrbcatlist.cpp (refresh) : A std::cout call replaced 
	by a LOGCAT* one to avoid std out print when unit test.
	* common/xmlattributelist.cpp (refresh) : A std::cout call replaced 
	by a LOGCAT* one to avoid std out print when unit test.
	* common/xmlbonusfilelist.cpp (refresh) : A std::cout call replaced 
	by a LOGCAT* one to avoid std out print when unit test.
	* common/xmlbonusfile.cpp (refresh) : A std::cout call replaced by a
	LOGCAT* one to avoid std out print when unit test.

2009-01-13 Jerome Pasquier  <rainbru@free.fr>
	* common/xmlpersolist.cpp (refresh) : A cout call replaced by a
	LOGCAT* one to avoid std out print when unit test.
	
2009-01-11 Jerome Pasquier  <rainbru@free.fr>
	* common/xmlserverlist.cpp (getServerList) : Now returns NULL if
	doc is NULL (an error occured).
	* common/xmlserverlist.cpp (xmlAccountList) : Add some initializers
	to avoid segfault due to non-NULL values.

	* tests/common/curlaccounttogglebacklisttest.h (testFinalValue) :
	Now test if the returned item is not NULL to avoid a segfault.
	* tests/common/curlaccounttogglebacklisttest.h (testInitialValue) :
	Now test if the returned item is not NULL to avoid a segfault.
	
	* common/xmlaccountlist.cpp (xmlAccountList) : Add some initializers