@@ -1,3 +1,7 @@
+2009-01-29 Carine Chum <carine.chum@free.fr>
+	* acinclude.m4 : Changing some cross-compil stuff to prevent
+	undefined reference when linking the executable.
+	
 2009-01-28 Carine Chum <carine.chum@free.fr>
 	* acinclude.m4 : Added support for the $DLL_EXT variable to
 	some cross-compilation aware macros.
